--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "formik": "^2.2.6",
+    "grommet": "^2.17.2",
+    "grommet-icons": "^4.5.0",
+    "polished": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.3",
     "swr": "^0.5.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
@@ -41,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "eslint-plugin-prettier": "^3.4.0",
     "msw": "^0.28.2",
     "prettier": "^2.2.1"
